# resume-matcher

./: .gitignore  README.md  main.py  pyproject.toml
instance/: matcher.db
matcher/: job_matcher.py  model_utils.py  models.py  resume_utils.py
migrations/versions/: e6f64612302c_initial_migration.py  f364ddce5d27_initial_migration.py
static/: auth.css  basic.css  history.css  index.css  login.css  script.js  style.css  styles.css  theme.css
templates/: history.html  index.html  results.html
templates/auth/: forgot_password.html  login.html  register.html
