[project]
name = "resume-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-wtf>=1.2.2",
    "jwt>=1.3.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pdfminer-six>=20250327",
    "python-docx>=1.1.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.2",
    "torch>=2.6.0",
]
